<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_songs"
        android:icon="@drawable/ic_music"
        android:title="@string/tab_songs" />

    <item
        android:id="@+id/nav_playlists"
        android:icon="@drawable/ic_playlist"
        android:title="@string/tab_playlists" />

    <item
        android:id="@+id/nav_upload"
        android:icon="@drawable/ic_upload"
        android:title="@string/tab_upload" />

    <item
        android:id="@+id/nav_device"
        android:icon="@drawable/ic_device"
        android:title="@string/tab_device" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />

</menu>
